# RAI

./: .env.example  .gitignore  LICENSE  RAI文档.txt  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  server-open.js  server.js  textExtractor.js  user-session-token.js  更新运维.txt
agent/: engine.js  plan-parser.js  prompts.js
historical-releases/: README.md
historical-releases/2026-04-08/: README.md  release_manifest.csv
public/: app.js  index.html  landing.html  package.json  selection-explainer.css  selection-explainer.js  site.webmanifest  styles.css  sw.js
public/lib/: marked.min.js
scripts/: formal-poe-removal-regression.js  formal-user-bugs-regression.js  passkey-regression.js  security-smoke.js  selection-explanation-regression.js  user-session-token-regression.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
