[package]
name = "rai_desktop"
version = "0.10.9+16"
description = "RAI desktop client"
authors = ["Rick"]
license = ""
repository = "https://github.com/Rick-953/RAI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
